added side bar toggle

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "@inertiajs/inertia": "^0.11.1",
+        "html2pdf.js": "^0.10.2",
         "vuex": "^4.1.0"
     }
 }
